--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "milon/barcode": "^11.0",
-        "spatie/laravel-permission": "^6.7"
+        "spatie/laravel-permission": "5.11"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.12",
